added logo image

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       </a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Welcome <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Goals</a>
-          <a class="nav-item nav-link" href="#">Location & Details</a>
-          <a class="nav-item nav-link" href="#">Guest List</a>
-          <a class="nav-item nav-link" href="#">Lodging</a>
-          <a class="nav-item nav-link" href="#">Registration</a>
-          <a class="nav-item nav-link" href="#">FAQ</a>
+          <a class="nav-item nav-link minicaps active" href="#">Welcome <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link minicaps" href="#">Goals</a>
+          <a class="nav-item nav-link minicaps" href="#">Location & Details</a>
+          <a class="nav-item nav-link minicaps" href="#">Guest List</a>
+          <a class="nav-item nav-link minicaps" href="#">Lodging</a>
+          <a class="nav-item nav-link minicaps" href="#">Registration</a>
+          <a class="nav-item nav-link minicaps" href="#">FAQ</a>
         </div>
       </div>
     </nav>
