header and navbar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <ul class="nav navbar-nav">
-          <a class="nav-item nav-link minicaps data-scroll" href="#intro">Welcome</a>
+          <a class="nav-item nav-link minicaps data-scroll" href="#intro">About</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#goals">Goals</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#details">Location & Details</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#guest-list">Guest List</a>
@@ -43,12 +43,22 @@
       </div>
     </nav>
 
+    <header id="page-header" class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="event-logo col-12 col-md-4">
+          <img src="img/kansas-logo-blue.png">
+        </div>
+        <div class="event-info col-12 col-md-8">
+          <h1 class="display-3" data-aos="slide-left">Hi there!</h1>
+          <p class="lead" data-aos="slide-left">P2PU is hosting hosting a 2-day gathering of learning circle practitioners in <span class="bold">Kansas City</span> on <span class="bold">May 17-18, 2018</span></p>
+          <a data-scroll href="#intro"><button class="p2pu-btn btn orange" data-aos="slide-up">Up to join?</button></a>
+        </div>
+      </div>
+    </header>
 
     <section id="intro">
       <div class="content" data-aos="slide-up">
-        <h2>Hi there!</h2>
-
-        <p>We’re hosting a 2-day gathering of learning circle practitioners in Kansas City on May 17-18, 2018 - up to join?</p>
+        <h2>About</h2>
 
         <p>Starting with Chicago Public Library in 2015, learning circles are now being run in 27 public library systems across the United States and Canada and 13 branches of the Kenya National Library Service. Wow! That’s a lot of learning! More than 1000 study group meetings actually. However, except for a few chance encounters, we’ve never been able to meet up in person to share our experiences and plans.</p>
 
