--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </script>
     <script src="js/smooth-scroll.polyfills.min.js"></script>
     <script>
-      var scroll = new SmoothScroll('a[href*="#"]');
+      var scroll = new SmoothScroll('a[href*="#"]', { offset: 60 });
     </script>
 
   </body>
