add animation to buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <div class="content" data-aos="slide-up">
         <h2>About</h2>
 
-        <p>Starting with Chicago Public Library in 2015, learning circles are now being run in 27 public library systems across the United States and Canada and 13 branches of the Kenya National Library Service. Wow! That’s a lot of learning! More than 1000 study group meetings actually. However, except for a few chance encounters, we’ve never been able to meet up in person to share our experiences and plans.</p>
+        <p>Starting with Chicago Public Library in 2015, learning circles are now being run in 27 public library systems across the United States and Canada and 13 branches of the Kenya National Library Service.</p>
+
+        <p>Wow! That’s a lot of learning! More than 1000 study group meetings actually. However, except for a few chance encounters, we’ve never been able to meet up in person to share our experiences and plans.</p>
 
         <p>With the support of the Institute of Museum and Library Services, P2PU and Kansas City Public Library will be hosting a first-of-its-kind gathering of learning circle practitioners and peer learning advocates.</p>
       </div>
@@ -115,7 +117,7 @@
       <div class="content" data-aos="slide-up">
         <h2>Guest List</h2>
         <p>We welcome attendance from all learning circle practitioners, facilitators, P2PU friends and supporters, librarians and educators, and those committed to peer, community-based, equitable and open learning. Our aim is for this to be an intimate and interactive event that will host between 30 – 40 participants.</p>
-        <p>Confirmed attendance includes the entire P2PU Staff Nico, Dirk, and Grif (we live in three different countries – so this is a rare event!), learning circle facilitators and librarians from Chicago Public Library, Wichita Public Library, Tampa-Hillsborough Public Library, Twin City Public Library, Charlotte Mecklenburg Public Library, and of course let’s not forget Kansas City Public Library too. We also plan to host long-time P2PU advocates and others who have been running learning circles in community centers, literacy centers and immigrant learning centers.</p>
+        <p>Confirmed attendance includes the entire P2PU Staff Nico, Dirk, and Grif (we live in three different countries – so this is a rare event!), learning circle facilitators and librarians from Chicago Public Library, Wichita Public Library, Tampa-Hillsborough Public Library, Twin Lakes Public Library, Charlotte Mecklenburg Public Library, and of course let’s not forget Kansas City Public Library too. We also plan to host long-time P2PU advocates and others who have been running learning circles in community centers, literacy centers and immigrant learning centers.</p>
 
         <div class="participants">
             <div class="logo">
@@ -161,7 +163,7 @@
       <div class="content" data-aos="slide-up">
         <h2>Registration</h2>
         <p>If you would like to attend, we would love to have you. Our only expectation is that those who attend will be able to actively contribute their experience and have an interest in the development of learning circles and P2PU.</p>
-        <p>No big registration process necessary and no registration fees. Register by sending Nico a message at Nico@p2pu.org and confirm the names of those who will be attending. We’ll follow up with other details or questions that we might have for you.</p>
+        <p>No big registration process necessary and no registration fees. Register by sending Nico a message at <a class="bold" href="mailto:nico@p2pu.org">Nico@p2pu.org</a> and confirm the names of those who will be attending. We’ll follow up with other details or questions that we might have for you.</p>
       </div>
     </section>
 
