clean up css and add favicon

--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>P2PU | Kansas City 2018</title>
     <meta name="description" content="P2PU conference in Kansas City 2018">
-    <!-- bootstrap.min.css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- bootstrap.min.css v4.0 -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- font-awesome -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <!-- AOS -->
+    <link rel="stylesheet" href="css/aos.css">
     <!-- custom.css -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- AOS -->
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#008080">
+    <link rel="icon" href="favicon.ico">
+    <meta name="msapplication-TileColor" content="#B7D500">
+    <meta name="theme-color" content="#FCFCFC">
 </head>
 
 <body data-spy="scroll" data-target="#navbarNavAltMarkup" data-offset="70">
