added photo of library, map to location, and getting there section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>P2PU | Kansas City 2018</title>
+    <title>P2PU Gathering Kansas City</title>
     <meta name="description" content="P2PU conference in Kansas City 2018">
     <!-- bootstrap.min.css v4.0 -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,6 +34,7 @@
           <a class="nav-item nav-link minicaps data-scroll" href="#goals">Goals</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#details">Location &amp; Details</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#lodging">Lodging</a>
+          <a class="nav-item nav-link minicaps data-scroll" href="#getting-there">Getting there</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#guest-list">Guest List</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#registration">Registration</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#faq">FAQ</a>
@@ -71,12 +72,17 @@
         <h2>Goals</h2>
         <p>You can’t run a learning circle without setting goals, right? Together, our meeting aims to achieve the following:</p>
         <ul>
-            <li>Create an interactive and supportive environment for learning circle practitioners to meet and get to know one another forming the foundation to a community of practice</li>
-            <li>Share, listen to and document stories, outcomes, and best practices for supporting community-based peer learning approaches and running learning circles within libraries and other community centres</li>
-            <li>Model and share interactive exercises and tools that could be integrated into learning circles or other learning programs</li>
-            <li>Discuss P2PU vision, goals and future opportunities for growth</li>
-            <li>Build consensus around the learning circle mode, values, benefits and onboarding process</li>
+            <li>Get to know one another</li>
+            <li>Share and document stories, outcomes, and best practices for supporting learning circles within libraries and community centers</li>
+            <li>Co-design new exercises and tools that support learning circles and other related library programs</li>
+            <li>Explore and build consensus about the learning circle model, its values, and potential directions for our movement</li>
         </ul>
+        <div class="image">
+          <img src="img/kc-library.jpg" alt="Kansas City Library">
+          <div class="caption">
+            <small>Kansas City Central Library. Photo credit: Jonathan Moreau <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" class="bold">CC BY-NC-ND 2.0</a></small>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -84,7 +90,9 @@
       <div class="content" data-aos="slide-up">
         <h2>Location and Details</h2>
 
-        <p>The event will be hosted at the Kansas City Public Library Main Branch located at … in Kansas City, Missouri, USA. The program will begin with an optional dinner on Wednesday May 16th, with the official program beginning on the morning of Thursday May 17th ending in the late morning of Friday May 18th.</p>
+        <p>The gathering will take place at the Helzberg Auditorium on the 5th floor of Kansas City Public Library’s downtown location (14 West 10th Street, Kansas City, Missouri, USA.) KCPL is a fully accessible building, and we are available to help accommodate any specific needs you may have.</p>
+
+        <p>We’ll begin at 9 AM on the morning of Thursday May 17th, and end around lunchtime on Friday the 18th. For those who can make it, we’ll be hosting a dinner on Wednesday evening as well.</p>
 
         <div class="itinerary">
           <div class="col-md-4">
@@ -97,8 +105,12 @@
           </div>
           <div class="col-md-4">
               <div class="date">Friday, May 18</div>
-              <div>Morning Reception ending at noon</div>
+              <div>Morning activities ending around noon</div>
           </div>
+        </div>
+
+        <div class="image">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12384.665670468386!2d-94.59046064732213!3d39.1026812!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0f05e3baafcd9%3A0x1e7f66c99af64550!2sCentral+Library!5e0!3m2!1sen!2sus!4v1519757046430" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -106,8 +118,16 @@
     <section id="lodging">
       <div class="content" data-aos="slide-up">
         <h2>Lodging</h2>
-        <p>It’s up to you on where you stay! We are not planning on organizing pre-booked hotel rooms or discounted rooms. However, in the coming weeks we will be listing hotels nearby to the Main Branch that are recommended by Kansas City Public Library.</p>
-        <p>Also, in case you were wondering, we didn’t end up finding a big monster mansion to host everyone. We really tried, but it didn’t seem feasible. Next time, we promise!</p>
+        <p>Nearby hotel options include <a href="http://www.marriott.com/hotels/travel/mcidt-kansas-city-marriott-downtown/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2">Kansas City Marriott Downtown</a>, <a href="https://www.hotelphillips.com/">Hotel Phillips</a>, <a href="https://www.ihg.com/hotelindigo/hotels/us/en/kansas-city/mkcsw/hoteldetail">Hotel Indigo</a>, a bunch of <a href="https://www.google.com/maps/search/hotel/@39.1027138,-94.5905035,15z/data=!3m1!4b1">other hotel options</a> as well. There are also some nice Airbnb options available along the <a href="http://kcstreetcar.org/">free, public streetcar line</a> that serves the library and runs north to south between River Market and Union Station.</p>
+        <p>We are not planning on organizing pre-booked hotel rooms.</p>
+      </div>
+    </section>
+
+    <section id="getting-there">
+      <div class="content" data-aos="slide-up">
+        <h2>Getting to Kansas City</h2>
+        <p>Kansas City is served by Kansas City International Airport (MCI), located about 20 miles north of the city. There are many Southwest flights in and out of MCI, so make sure you check their website, as they aren’t listed on most third party flight search engines.</p>
+        <p>A list of ground transportation options, including the public bus service, are <a href="http://www.flykci.com/getting-to-from/ground-transportation/">listed on here</a>. Services like Lyft and Uber are also available.</p>
       </div>
     </section>
 
@@ -115,7 +135,7 @@
       <div class="content" data-aos="slide-up">
         <h2>Guest List</h2>
         <p>We welcome attendance from all learning circle practitioners, facilitators, P2PU friends and supporters, librarians and educators, and those committed to peer, community-based, equitable and open learning. Our aim is for this to be an intimate and interactive event that will host between 30 – 40 participants.</p>
-        <p>Confirmed attendance includes the entire P2PU Staff Nico, Dirk, and Grif (we live in three different countries – so this is a rare event!), learning circle facilitators and librarians from Chicago Public Library, Wichita Public Library, Tampa-Hillsborough Public Library, Twin Lakes Public Library, Charlotte Mecklenburg Public Library, and of course let’s not forget Kansas City Public Library too. We also plan to host long-time P2PU advocates and others who have been running learning circles in community centers, literacy centers and immigrant learning centers.</p>
+        <p>Confirmed attendance includes the entire P2PU team of Nico, Dirk, Sharon and Grif (we live in three different countries – so this is a rare event!), learning circle facilitators and librarians from Chicago Public Library, Wichita Public Library, Tampa-Hillsborough Public Library, Twin Lakes Public Library, Charlotte Mecklenburg Public Library, and of course let’s not forget Kansas City Public Library too. We also plan to host long-time P2PU advocates and others who have been running learning circles in community centers, literacy centers and immigrant learning centers.</p>
 
         <div class="participants">
             <div class="logo">
@@ -161,7 +181,10 @@
       <div class="content" data-aos="slide-up">
         <h2>Registration</h2>
         <p>If you would like to attend, we would love to have you. Our only expectation is that those who attend will be able to actively contribute their experience and have an interest in the development of learning circles and P2PU.</p>
-        <p>No big registration process necessary and no registration fees. Register by sending Nico a message at <a class="bold" href="mailto:nico@p2pu.org">Nico@p2pu.org</a> and confirm the names of those who will be attending. We’ll follow up with other details or questions that we might have for you.</p>
+        <p>There is no big registration process necessary and no registration fee. The only costs you incur are travel to Kansas City, lodging, and dinner on Wednesday night should you want to attend. (We’ll take care of breakfast and lunch on Thursday for everybody).</p>
+        <div>
+          <a href="https://docs.google.com/forms/d/1x9sNdY2mTbH9gsw252ZzSmpeInTb1YzyLNtYK0SRLU4/edit" class="p2pu-btn btn orange">Register</a>
+        </div>
       </div>
     </section>
 
@@ -194,7 +217,7 @@
               <h3>How much does it cost to attend?</h3>
             </div>
             <div class="answer">
-              <p>There are no fees to attend. Getting yourself to Kansas City and paying for accomodation and some food will be your main costs. We will be providing dinner, breakfast and lunch, so that should take the costs down a bit.</p>
+              <p>There are no fees to attend. Getting yourself to Kansas City and paying for accomodation and some food will be your main costs. We will be providing breakfast and lunch on Thursday, so that should take the costs down a bit. Wednesday’s dinner will be covered for IMLS grant participants, but others will have to pay if they want to attend (sorry!).</p>
             </div>
           </div>
 
